--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "erpcore",
   "description": "Fully built on Typescript",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,5 +22,8 @@
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "mongodb": "^4.11.0"
   }
 }
