--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "erpcore",
   "description": "Fully built on Typescript",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,6 +25,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "mongodb": "^4.11.0"
+    "mongodb": "^4.11.0",
+    "tslib": "^2.4.1"
   }
 }
