--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.7",
     "mongodb": "^4.13.0",
+    "nodemailer": "^6.8.0",
     "tslib": "^2.4.1"
   }
 }
