--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "tslib": "^2.4.1"
   },
   "dependencies": {
     "mongodb": "^4.13.0",
-    "nodemailer": "^6.8.0",
-    "tslib": "^2.4.1"
+    "nodemailer": "^6.8.0"
   }
 }
